src/workloads/webapps/contacts/client.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client
  namespace: contacts
  labels:
    app: contacts-client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: contacts-client
  template:
    metadata:
      labels:
        app: contacts-client
    spec:
      serviceAccountName: contacts-client-waiter
      containers:
        - name: contacts-client
          image: ocr.jcan.dev/library/talon/contacts-client:1.4.1
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: regcred-external-secret
---
apiVersion: v1
kind: Service
metadata:
  name: client
  namespace: contacts
spec:
  selector:
    app: contacts-client
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 80
