src/workloads/webapps/contacts/postgres.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: contacts
  labels:
    app: contacts-postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: contacts-postgres
  template:
    metadata:
      labels:
        app: contacts-postgres
    spec:
      containers:
        - name: contacts-postgres
          image: ocr.jcan.dev/library/talon/contacts-db:1.4.2-amd64
          ports:
            - containerPort: 5432
      imagePullSecrets:
        - name: regcred-external-secret
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: contacts
spec:
  selector:
    app: contacts-postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
