src/workloads/webapps/contacts/server.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server
  namespace: contacts
  labels:
    app: contacts-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: contacts-server
  template:
    metadata:
      labels:
        app: contacts-server
    spec:
      serviceAccountName: contacts-server-waiter
      containers:
        - name: server          
          image: ocr.jcan.dev/library/talon/contacts-server:1.4.1
          ports:
            - containerPort: 3001
      imagePullSecrets:
        - name: regcred-external-secret
---
apiVersion: v1
kind: Service
metadata:
  name: server
  namespace: contacts
spec:
  selector:
    app: contacts-server
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
