src/workloads/webapps/contacts/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: contacts-route
  namespace: contacts
spec:
  parentRefs:
  - group: gateway.networking.k8s.io	
    kind: Gateway	
    name: contacts-gateway
    namespace: contacts
  hostnames:
  - demo.jcan.dev
  rules:
  - backendRefs:
    - group: ''	
      kind: Service	
      name: client # Your existing K8s Service
      port: 3000
      weight: 1	
    matches:	
      - path:
          type: PathPrefix	
          value: /
