src/workloads/webapps/contacts/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: contacts-ingress
  namespace: contacts
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prd
spec:
  ingressClassName: traefik
  rules:
    - host: demo.jcan.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: client
                port:
                  number: 3000
  tls:
    - hosts:
        - demo.jcan.dev
      secretName: demo-tls
